adding  list of allcomment a logged in user has made
