# src/routes/commentsRoutes.js
@@ -1,5 +1,5 @@
 import express from "express";
-import { addComment, deleteComment, getALLCommentsForALLposts, getCommentById, getComments, getCommentsForUserPosts, updateComment } from "../controllers/commentController.js";
+import { addComment, deleteComment, getALLCommentsForALLposts, getCommentById, getComments, getCommentsByLoggedInUser, getCommentsForUserPosts, updateComment } from "../controllers/commentController.js";
 import { Authenticate } from "../utils/jwtfunctions.js";
 
 // routes/commentRoutes.js
@@ -12,6 +12,7 @@ CommentRouter.get('/comment/:id', getCommentById);
 CommentRouter.put('/comment/:id', updateComment);
 
 CommentRouter.use(Authenticate);
+CommentRouter.get('/mycommentsToposts', getCommentsByLoggedInUser);
 CommentRouter.post('/:postId', addComment);
 CommentRouter.delete('/comment/:id',deleteComment);
 CommentRouter.get('/users/:userId/posts/comments', Authenticate, getCommentsForUserPosts);
